--- a/back/package.json
+++ b/back/package.json
@@ -1,7 +1,7 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "description": "",
+  "description": "Back end del proyecto Rick and Morty",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -11,12 +11,13 @@
     "start": "nodemon ./src/routes/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Leandro Martínez",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
