--- a/back/package.json
+++ b/back/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/routes/index.js"
+    "start": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "Leandro Martínez",
